--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
-dnspython
-fastapi
-gunicorn
-pymongo[srv]
-pydantic[email]
-python-dotenv
-python-multipart
-uvicorn[standard]
+anyio==3.6.2
+certifi==2023.5.7
+click==8.1.3
+dnspython==2.3.0
+email-validator==2.0.0.post2
+fastapi==0.95.1
+gunicorn==20.1.0
+h11==0.14.0
+httptools==0.5.0
+idna==3.4
+pydantic==1.10.7
+pymongo==4.3.3
+python-dotenv==1.0.0
+python-multipart==0.0.6
+PyYAML==6.0
+sniffio==1.3.0
+starlette==0.26.1
+typing_extensions==4.5.0
+uvicorn==0.22.0
+uvloop==0.17.0
+watchfiles==0.19.0
+websockets==11.0.3
